--- a/support.html
+++ b/support.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
       *::selection {
-        background-color: rgba(148, 814, 88, 0);
+        background-color: lawngreen;
       }
     </style>
   </head>
