--- a/support.html
+++ b/support.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      body{
+        color: lawngreen;
+      }
       *::selection {
         background-color: lawngreen;
       }
@@ -12,5 +15,6 @@
   </head>
   <body>
     <h1>♿♿♿♿ 😭</h1>
+    <h1>no support</h1>
   </body>
 </html>
